--- a/css/style.css
+++ b/css/style.css
@@ -38,4 +38,18 @@ h1 {
 
   .question {
   	display: none;
+  	align-items: center;
+  	justify-content: center;
+
+  }
+
+  .answers {
+  	list-style: none;
+  }
+
+  .bottomInfo {
+  	display: flex;
+	justify-content: space-between;
+	list-style: none;
+	font-size: 1.5em;
   }
