--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ header {
 	display: flex;
   	align-items: center;
   	justify-content: center;
+  	margin-top: 2em;
   	}
 
 h1 {
@@ -22,33 +23,65 @@ h1 {
 	display: flex;
 	justify-content: space-between;
 	list-style: none;
-	font-size: 1.5em;
+	font-size: 1.3em;
 }
 
-.quizzStart {
+.quizStart {
 	text-align: center;
+	font-size: 1.5em;
+	margin-top: 2em;
+	margin-bottom: 4em;
   }
 
-  .startbutton {
-	display: block;
+ /*tired with .quizStart p and didn't target*/
+ .startText {
+	margin-bottom: .5em;
+ }
+
+ button {
   	align-items: center;
   	justify-content: center;
+  	border-radius: 12px;
+  	border: none;
+  	background-color: green;
+  	color: black;
+/*  	padding: 1.5em 4em;*/
+  	font-size: 1.3em;
+
+
 
   }
 
   .question {
   	display: none;
  	text-align: center;
+ 	font-size: 1.5em;
+
 
   }
 
   .answers {
   	list-style: none;
+  	font-size: 1.2em;
   }
+
+.submitButton {
+    align-items: center;
+  	justify-content: center;
+  	border-radius: 12px;
+  	border: none;
+  	background-color: green;
+  	color: black;
+/*  	padding: 1.5em 4em;*/
+  	font-size: 1.3em;
+  	margin-top: 1em;
+}
 
   .bottomInfo {
   	display: flex;
 	justify-content: space-between;
+	align-items: flex-end;
 	list-style: none;
-	font-size: 1.5em;
+	font-size: 1.3em;
+
   }
