--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,41 @@ body {
 	color: green;
 }
 
+.topborder, .bottomborder, .leftborder, .rightborder {
+  background: green;
+  position: fixed;
+}
+
+.leftborder, .rightborder {
+  top: 0; 
+  bottom: 0;
+  width: 1em;
+}
+
+.leftborder { 
+  left: 0; 
+}
+
+.rightborder { 
+  right: 0; 
+  margin: 0;
+}
+
+.topborder, .bottomborder{
+  left: 0; 
+  right: 0;
+  height: 1em;
+}
+
+.topborder { 
+  top: 0; 
+}
+
+.bottomborder { 
+  bottom: 0; 
+}
+
+
 header {
 
   display: flex;
@@ -19,7 +54,7 @@ header {
 
 h1 {
  font-size: 2.2em;
- margin-bottom: 2em;
+ margin-bottom: 1em;
  max-width: 50%;
  text-align: center;
 
@@ -49,6 +84,7 @@ a {
 	font-size: 1.3em;
   padding-right: 2em;
   padding-left: 2em;
+  padding-top: 1em;
 }
 
 .quizStart, .quizEnd {
@@ -88,7 +124,7 @@ button {
 .question {
   display: none;
   /* 	text-align: center;*/
-  margin-left: 25%;
+  margin-left: 27%;
   margin-right: 25%;
   font-size: 1.2em;
 
@@ -134,6 +170,9 @@ button {
 
 .bottom {
   display: none;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .bottomInfo {
