--- a/css/style.css
+++ b/css/style.css
@@ -121,9 +121,9 @@ button {
 
 .question {
   display: none;
-  margin-left: 27%;
+  margin-left: 30%;
   margin-right: 25%;
-  font-size: 1.2em;
+  font-size: 1.4em;
 
 
 }
@@ -131,7 +131,7 @@ button {
 .answers {
  list-style: none;
  font-size: 1.1em;
- margin-left: 12%;
+ margin-left: 15%;
 }
 
 .submitButton {
@@ -162,6 +162,22 @@ button {
   font-size: 1em;
   margin-top: 0;
 
+}
+
+.socialIcons{
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  bottom: 2em;
+  width: 75%;
+  left: 50%;
+  margin-left: -37.5%;
+}
+#infoIcon {
+  padding-left: 1.5em;
+}
+#gitIcon {
+  padding-right: 1.5em;
 }
 
 .bottom {
